--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android_Sprint3_Challenge</string>
+    <string name="search_hint">Enter Pokeman Name or Number</string>
+    <string name="search_button_text">Search</string>
 </resources>
