--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="ViewerTextAbilities">Abilities</string>
     <string name="SearchHintEdit">Enter name or number of Pokemon</string>
     <string name="SearchButtonText">Search</string>
+    <string name="CardviewNamePlaceholder">Pokemon Name</string>
+    <string name="CardviewNumberPlaceholder">No. 14</string>
 </resources>
